# hicom-mon

./: CMakeLists.txt  hicom-mon.sln
hicom-mon/: CMakeLists.txt  EBCDICConverter.c  EBCDICConverter.h  hicom-mon.vcxproj  main.c  main.cpp
